--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "pdf2json": "^3.0.5",
     "svelte": "^4.2.8",
+    "update-electron-app": "^3.0.0",
     "wink-eng-lite-web-model": "^1.5.2",
     "wink-nlp": "^1.14.3"
   }
