--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "citation-machine",
   "productName": "citation-machine",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "My Electron application description",
   "main": ".vite/build/main.js",
   "scripts": {
@@ -33,7 +33,6 @@
     "@melt-ui/pp": "^0.1.4",
     "@melt-ui/svelte": "^0.64.3",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
-    "@types/better-sqlite3": "^7.6.8",
     "@typescript-eslint/parser": "^5.0.0",
     "electron": "27.1.3",
     "eslint": "^8.0.1",
@@ -43,12 +42,9 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
-    "@xenova/transformers": "^2.10.0",
+    "compute-cosine-similarity": "^1.1.0",
     "electron-squirrel-startup": "^1.0.0",
-    "pdf2json": "^3.0.5",
     "svelte": "^4.2.8",
-    "update-electron-app": "^3.0.0",
-    "wink-eng-lite-web-model": "^1.5.2",
-    "wink-nlp": "^1.14.3"
+    "update-electron-app": "^3.0.0"
   }
 }
